# markdown-preview-server

./: .editorconfig  .gitignore  Cargo.toml  Makefile  NOTICE.txt  README.md  TODO.txt  build.rs  bun.lockb  package.json  tailwind.config.js  test.html  test.md  test2.md
.github/: dependabot.yml
.github/workflows/: build-linux.yml  build-windows.yml
assets/fonts/: jetbrains-mono-v13-cyrillic_cyrillic-ext_greek_latin_latin-ext_vietnamese-300.eot  jetbrains-mono-v13-cyrillic_cyrillic-ext_greek_latin_latin-ext_vietnamese-600.eot  jetbrains-mono-v13-cyrillic_cyrillic-ext_greek_latin_latin-ext_vietnamese-600italic.eot  jetbrains-mono-v13-cyrillic_cyrillic-ext_greek_latin_latin-ext_vietnamese-italic.eot  jetbrains-mono-v13-cyrillic_cyrillic-ext_greek_latin_latin-ext_vietnamese-regular.eot
doc/: frame_format.txt
docs/: template.md
schemas/: template.json
src/: args.rs  cli_compile.rs  colors.css  config.rs  css.rs  export.rs  generate_defaults.rs  main.rs  markdown.rs  styles.css  template.rs
src/config/: loader.rs  mod.rs
src/editor_connection/: generic.rs  mod.rs  parse_frame.rs  stdio.rs
src/editor_connection/frame/: editor.rs  mod.rs  server.rs
src/editor_connection/frame/editor/: mod.rs
src/editor_connection/frame/server/: mod.rs
src/error/: config.rs  mod.rs
src/frontmatter_parser/: frontmatter.rs  mod.rs  parser.rs
src/hooks/: mod.rs  toc.rs
src/markdown_extensions/: backticks.rs  code_block.rs  custom_class.rs  equation_graph.rs  heading_with_id.rs  image_with_file.rs  katex.rs  latex.rs  latex_inline.rs  mod.rs  newline.rs  page_break.rs  toc.rs
src/parser/: block.rs  document.rs  frontmatter.rs  mod.rs  parser.rs
src/parser/blocks/spec/: mod.rs  paragraph.rs  thematic_break.rs
src/patches/: code_pair.rs  full_link.rs  link.rs  mod.rs
src/server/: editor.rs  mod.rs  parser.rs  state.rs
src/server/web/: editor_socket.rs  mod.rs  static_dir.rs  viewer_socket.rs
src/server/web/views/: content.rs  index.rs  mod.rs
src/util/: ipc_replace_special_chars.rs  mod.rs  toc.rs
src/util/constants/: magic_bytes.rs  mod.rs
src/viewer_connection/: mod.rs  parse_frame.rs
src/viewer_connection/frame/: mod.rs  server.rs  viewer.rs
src/web/: document.rs  filename.rs  frontend.rs  image.rs  mod.rs  pdf.rs  ping.rs  ws.rs
src/web/ws/: editor.rs  mod.rs  webview.rs
src_web/: README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
src_web.old/: package.json
src_web.old/src/: main.ts
src_web.old/src/css/: materialicons.css
src_web/public/assets/css/: jetbrainsmono.css
src_web/public/assets/fonts/jetbrainsmono/: jetbrains-mono-500.eot  jetbrains-mono-500italic.eot  jetbrains-mono-700.eot  jetbrains-mono-800.eot  jetbrains-mono-800italic.eot  (+2 more)
src_web/src/: App.svelte  app.css  app.d.ts  main.ts  optionStore.ts  url.d.ts  websocket.ts  websocketPrefixes.ts  ws.ts
src_web/src/css/: app.css  jetbrainsmono.css  roboto.css
src_web/src/lib/: Content.svelte
src_web/src/routes/: +layout.svelte  +layout.ts  +page.svelte  bar.svelte  options.svelte
src_web/src/routes/content/: +page.svelte  page.css
src_web/src/util/: scrollToBottom.ts
static/: index.css
static/js/: frames.js  socket.js  theme.js  viewer.js
static_assets/templates.d/default/: template.body.html  template.css  template.document.html  template.json
static_assets/templates.d/github/: template.body.html  template.css  template.json
templates/: content.html  index.html  layout.html
templates/components/: appbar.html
web/: index.html
