[package]
name = "markdown-preview-server"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
clap = { version = "4.1.8", features = ["derive"] }
env_logger = "0.10.0"
futures = "0.3.28"
futures-channel = "0.3.28"
futures-util = "0.3.28"
include_dir = "0.7.3"
latex2mathml = "0.2.3"
log = "0.4.17"
markdown-it = "0.4.0"
mime_guess = "2.0.4"
regex = "1.7.1"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
syntect = "5.0.0"
tokio = { version = "1.27.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
tower-http = { version = "0.4.0", features = ["full"] }
tungstenite = "0.18.0"
yaml-rust = "0.4.5"

[dev-dependencies]
axum-macros = "0.3.7"

[profile.release]
opt-level = 3
strip = true
lto = true
