[package]
name = "markdown-preview-server"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
axum-macros = "0.3.8"
clap = { version = "4.1.8", features = ["derive"] }
contains = "0.1.0"
delay = "0.3.1"
derivative = "2.2.0"
env_logger = "0.10.0"
futures = "0.3.28"
futures-channel = "0.3.28"
futures-util = "0.3.28"
headless_chrome = "1.0.5"
httparse = "1.8.0"
include_dir = "0.7.3"
latex2mathml = "0.2.3"
log = "0.4.17"
markdown-it = "0.5.0"
mdurl = "0.3.1"
meval = "0.2.0"
mime_guess = "2.0.4"
notify = { version = "6.0.0", default-features = false, features = ["macos_kqueue"] }
once_cell = "1.18.0"
plotters = "0.3.5"
regex = "1.7.1"
relative-path = "1.8.0"
reqwest = "0.11.18"
schemars = "0.8.12"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.105"
shellexpand = { version = "3.1.0", features = ["full", "path"] }
slug = "0.1.4"
syntect = "5.0.0"
tokio = { version = "1.29.1", features = ["full"] }
tokio-tungstenite = "0.18.0"
toml = "0.7.4"
tower-http = { version = "0.4.3", features = ["full"] }
tungstenite = "0.18.0"
unicode-segmentation = "1.10.1"
url = "2.4.0"
urlencoding = "2.1.2"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
yaml-rust = "0.4.5"

[profile.release]
opt-level = 3
#opt-level = 'z'
strip = true
lto = true
